Fixed material-collapse influencing parent width when collapsed

--- a/material-collapse/material-collapse.less
+++ b/material-collapse/material-collapse.less
@@ -4,6 +4,11 @@
 	overflow: hidden;
 	transition: max-height 175ms cubic-bezier(0, 0, 0.2, 1);
 
+	&.material-collapse--collapsed {
+		> .material-collapse__content {
+			display: none;
+		}
+	}
 	&.material-collapse--expanded {
 		overflow: unset;
 	}
